kubernetes/namespace.yml
---
# 1. Create the namespace
apiVersion: v1
kind: Namespace
metadata:
  name: inventorypro
