kubernetes/backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventorypro-backend
  namespace: inventorypro
  labels:
    app: inventorypro
    tier: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: inventorypro
      tier: backend
  template:
    metadata:
      labels:
        app: inventorypro
        tier: backend
    spec:
      containers:
        - name: backend
          image: sidramalik1454/inventorypro-backend:latest
          ports:
            - containerPort: 8000
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 5
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: inventorypro-backend-svc
  namespace: inventorypro
spec:
  selector:
    app: inventorypro
    tier: backend
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
