kubernetes/frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventorypro-frontend
  namespace: inventorypro
  labels:
    app: inventorypro
    tier: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: inventorypro
      tier: frontend
  template:
    metadata:
      labels:
        app: inventorypro
        tier: frontend
    spec:
      containers:
        - name: frontend
          image: sidramalik1454/inventorypro-frontend:latest
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "50m"
              memory: "128Mi"
            limits:
              cpu: "200m"
              memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: inventorypro-frontend-svc
  namespace: inventorypro
spec:
  selector:
    app: inventorypro
    tier: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
